fix spacing on show page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -607,6 +607,7 @@ main{
   /* justify-content: center; */
   align-items: center;
   flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .showitem{
